# team-works

./: .gitignore  CLAUDE.md
backend/: .env.example  alembic.ini  mcp_server.py  pyproject.toml  requirements.txt  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 1edcd1d07554_initial_schema.py
backend/app/: main.py  mcp_app.py
backend/app/core/: config.py  database.py  dates.py  security.py
backend/app/models/: models.py
backend/app/routers/: admin.py  auth.py  dashboard.py  tasks.py  weekly_reports.py
backend/app/schemas/: admin.py  auth.py  task.py  weekly_report.py
backend/app/services/: ai_summary.py
backend/tests/: conftest.py  test_mcp_auth.py  test_mcp_server.py  test_mcp_tools.py  test_static.py  test_tasks.py  test_tenant_isolation.py  test_weekly_report_feedback.py  test_weekly_view.py
design/: admin.html  dashboard.html  login.html  manager-inbox.html  manager-report-detail.html  mytasks.html  weekly-report.html
docs/: db-spec.md  deploy-azure.md  functional-spec.md  mcp-setup-ja.md  screen-spec.md  tech-stack.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: DateNavigator.tsx  Layout.tsx  ProtectedRoute.tsx  Sidebar.tsx  TaskEditModal.tsx  ThemeProvider.tsx  ThemeToggle.tsx
frontend/src/hooks/: useInitUser.ts
frontend/src/lib/: api.ts  date.ts  queryClient.ts  types.ts
frontend/src/pages/: AdminPage.tsx  DashboardPage.tsx  InboxPage.tsx  LoginPage.tsx  MyTasksPage.tsx  ReportDetailPage.tsx  (+1 more)
scripts/: deploy.ps1  makezip.py  pull-prod-db.ps1
(+3 files in other folders)
